--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title> My first web pages  </title>
     </head>
     <body>
-          <h1>Hello world!</h1> 
+          Hello world! 
     </body>
 </html>
