--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title> My first web pages  </title>
     </head>
     <body>
-          Hello world! 
+        <h1> Hello world! </h1>
     </body>
 </html>
