--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title> My first web pages  </title>
     </head>
     <body>
-        <h1> Hello world! </h1>
+        <h1> Hello in my world! </h1>
     </body>
 </html>
